# ferriscraft-gl-experiments

./: Cargo.toml  README.md
assets/shaders/: fragment.glsl  primitive.vert  projectile.frag  projectile.vert  skybox.frag  skybox.vert  text.frag  text.vert  ui.frag  ui.vert  vertex.glsl  voxel.frag  voxel.vert
assets/shaders/include/: common.glsl
scripts/: entry.lua
src/: ecs.rs  events.rs  inspector.rs  main.rs  mesher.rs  movement.rs  particles.rs  render.rs  scripting.rs  utils.rs  window.rs
src/player/: mod.rs  movement.rs
src/render/: inspector.rs  material.rs  mesh.rs  mod.rs  primitives.rs
src/ui/: mod.rs  update.rs
src/world/: generation.rs  interaction.rs  mesher.rs  mod.rs
