[package]
name = "ferriscraft-gl-experiments"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy_ecs = "0.16.1"
egui_glium = "0.31.1"
fastnoise2 = "0.3.1"
glam = "0.30.5"
glium = "0.36.0"
glutin-winit = "0.5.0"
image = "0.25.6"
rand = "0.9.2"
rayon = "1.11.0"
