[package]
name = "ferriscraft-gl-experiments"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[dependencies]
bevy_ecs = { version = "0.16.1", features = ["multi_threaded"] }
bevy_tasks = "*"
gl = "0.14.0"
glam = "0.30.5"
glfw = "0.59.0"
image = "0.25.6"
noise = "0.9.0"
rand = "0.9.2"
rayon = "1.11.0"

[features]
default = []
profile = []
