[package]
name = "ferriscraft-gl-experiments"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
panic = "abort"
lto = "thin"
strip = true

[dependencies]
bevy_ecs = { version = "0.16.1", features = ["multi_threaded"] }
bevy_tasks = "*"
chrono = "0.4.42"
gl = "0.14.0"
glam = "0.30.5"
glfw = "0.60.0"
image = "0.25.8"
# mlua = { version = "0.11.3", features = ["luajit"] }
noise = "0.9.0"
rand = "0.9.2"
rayon = "1.11.0"

[features]
default = []
profile = []
